--- a/app3.html
+++ b/app3.html
@@ -58,7 +58,7 @@ ABCD4体同時に成功率の計算が可能です。
 
 <div class="optionalSection">
   <p style="font-size:13px;">
-    データ提供にご協力いただける場合は以下を入力し、① CSVをダウンロード → ② データ提供先のGoogleドライブへアップロードをお願いします。
+    データ提供にご協力いただける場合は以下を入力、① CSVダウンロード → ② データ提供先のGoogleドライブへアップロードをお願いします。
   </p>
 
   <div class="formSection">
@@ -187,7 +187,7 @@ function downloadCSV(){
   const blob=new Blob([csv],{type:"text/csv"});
   const a=document.createElement("a");
   a.href=URL.createObjectURL(blob);
-  a.download="成功率算出結果_ABCD別_Wilson.csv";
+  a.download="成功率算出結果_ABCD別.csv";
   a.click();
 }
 </script>
